zero-cost-templating/tests/ui/compile_fail/variable_macro_missing_parameters.stderr
error: unexpected end of macro invocation
  --> tests/ui/compile_fail/variable_macro_missing_parameters.rs:14:20
   |
9  | #[template_stream("test.html.hbs")]
   | ----------------------------------- when calling this macro
...
14 |     let template = test_page_title1!();
   |                    ^^^^^^^^^^^^^^^^^^^ missing tokens in macro arguments
   |
note: while trying to match meta-variable `$template:expr`
  --> tests/ui/compile_fail/variable_macro_missing_parameters.rs:9:1
   |
9  | #[template_stream("test.html.hbs")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the attribute macro `template_stream` (in Nightly builds, run with -Z macro-backtrace for more info)
